--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Layout Master</title>
 
@@ -19,17 +19,17 @@
     </ul>
 
   </nav>
-  <div class="container zone "> <img class="cover" src="img/undraw.png" alt=""></div>
+  <div class="container zone "> <img class="cover" src="./img/undraw.png" alt=""></div>
   <div class="zone blue grid-wrapper">
     <div class="box zone"> <img src="./img/files_2.png" alt=""></div>
-    <div class="box zone"> <img src="img/data_storage_2_2.png" alt=""></div>
-    <div class="box zone"> <img src="img/desktop_analytics_2.png" alt=""></div>
-    <div class="box zone"> <img src="img/monitor_coding_2.png" alt=""></div>
-    <div class="box zone"> <img src="img/monitor_settings_2.png" alt=""></div>
-    <div class="box zone"> <img src="img/server_2_2.png" alt=""></div>
-    <div class="box zone"> <img src="img/server_safe_2.png" alt=""></div>
+    <div class="box zone"> <img src="./img/data_storage_2_2.png" alt=""></div>
+    <div class="box zone"> <img src="./img/desktop_analytics_2.png" alt=""></div>
+    <div class="box zone"> <img src="./img/monitor_coding_2.png" alt=""></div>
+    <div class="box zone"> <img src="./img/monitor_settings_2.png" alt=""></div>
+    <div class="box zone"> <img src="./img/server_2_2.png" alt=""></div>
+    <div class="box zone"> <img src="./img/server_safe_2.png" alt=""></div>
     <!-- <div class="box zone"> <img src="img/undraw.png" alt=""></div> -->
-    <div class="box zone"> <img src="img/server_3.png" alt=""></div>
+    <div class="box zone"> <img src="./img/server_3.png" alt=""></div>
 
   </div>
   <!-- <div class="zone blue">Project Grid</div> -->
